--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/allanblackett/" class="icon brands fa-linkedin"><span class="label">LinkedIN</span></a></li>
-							<li><a href="https://github.com/AllanBlackett" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/allanblackett/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIN</span></a></li>
+							<li><a href="https://github.com/AllanBlackett" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -182,7 +182,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://ganefinancial.netlify.app/">Gane Financial</h2>
+										<h2><a href="https://ganefinancial.netlify.app/" target="_blank">Gane Financial</h2>
 									</header>
 									<a href="https://ganefinancial.netlify.app/" target="_blank" class="image fit"><img src="images\Portfolio\ganefinancial.jpg" alt="" /></a>
 									<p class="description">Gane Financial approached me to redesign their outdated website, which was suffering from slow loading speeds, an unappealing design, and poor mobile responsiveness. The new website features a modern, a more professional look that reflects their brand, improved performance with faster load times, and a fully mobile-responsive layout to ensure seamless accessibility across all devices.
@@ -196,12 +196,12 @@
 										</p>
 									</p>
 									<ul class="actions special">
-										<li><a href="https://ganefinancial.netlify.app/" class="button">VIEW SITE</a></li>
+										<li><a href="https://ganefinancial.netlify.app/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://thewonderer.com/">The Wonderer</h2>
+										<h2><a href="https://thewonderer.com/" target="_blank">The Wonderer</h2>
 									</header>
 									<a href="https://thewonderer.com/" target="_blank" class="image fit"><img src="images\Portfolio\wonderer.jpg" alt="" /></a>
 									<p class="description">The Wonderer needed a fresh and modern website to better connect with its community and showcase its unique lifestyle offerings. I redesigned their site to reflect their vibrant identity, creating a seamless user experience that highlights their services, events, and membership benefits. The new design includes interactive features, clear navigation, and a responsive layout, making it easier for visitors to explore what The Wonderer has to offer and drive membership inquiries.
@@ -211,12 +211,12 @@
 										</p>
 									</p>
 									<ul class="actions special">
-										<li><a href="https://thewonderer.com/" class="button">VIEW SITE</a></li>
+										<li><a href="https://thewonderer.com/" class="button" target="_blank">VIEW SITE</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://dundasvalleygolf.com">Dundas Valley</h2>
+										<h2><a href="https://dundasvalleygolf.com" target="_blank">Dundas Valley</h2>
 									</header>
 									<a href="https://dundasvalleygolf.com" target="_blank" class="image fit"><img src="images\Portfolio\dundas.jpg" alt="" /></a>
 									<p class="description">This was a website redesign. The previous website's poor mobile responsiveness hindered user engagement, particularly as more users accessed the site from smartphones and tablets. I revamped the website with a modern responsive design, incorporating vibrant imagery and concise descriptions to effectively highlight all amenities and activities and optimized its layout and functionality across all devices.
@@ -228,14 +228,14 @@
 									</p>
 								    </p>
 									<ul class="actions special">
-										<li><a href="https://dundasvalleygolf.com" class="button">VIEW SITE</a></li>
+										<li><a href="https://dundasvalleygolf.com" class="button" target="_blank">VIEW SITE</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2><a href="https://181cco.com/" target="_blank">181 Custom Caulking</a></h2>
 									</header>
-									<a href="https://181cco.com/" target="_blank"class="image fit"><img src="images\Portfolio\181.jpg" alt="" /></a>
+									<a href="https://181cco.com/" target="_blank" class="image fit"><img src="images\Portfolio\181.jpg" alt="" /></a>
 									<p class="description">For 181 Custom Caulking, the goal was to redesign their website to clearly highlight their services and help them manage client information better. I created a simple form system to collect details like emails from different types of clients, making their workflow smoother and more efficient. 
 									</br>
 								    <p class="description1">
