--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 					</div> -->
 
 					<div class="video-container">
-						<video autoplay muted loop playsinline class="background-video">
-							<source src="images\Video\bangkok.mp4" type="video/mp4">
+						<video autoplay muted loop playsinline class="background-video" poster="images\backup.jpg">
+							<source src="images/Video/bangkok.mp4" type="video/mp4">
+							<!-- Fallback image inside <video> -->
+							<img src="images\backup.jpg" alt="Bangkok Image Fallback">
 							Your browser does not support the video tag.
 						</video>
 						<div id="intro">
@@ -54,7 +56,6 @@
 							<li><a href="#projects">Latest Works</a></li>
 							<li><a href="#skills">Skills</a></li>
 							<li><a href="#contacts">Get In Touch</a></li>
-
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/allanblackett/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIN</span></a></li>
@@ -88,7 +89,7 @@
 										<ul class="about-list">
 											<li><span class="goldfont">Build</span> new websites from the ground up, reflecting their brand business goals.</li>
 											<li><span class="goldfont">Redesign</span> outdated websites to improve speed, navigation, and User Experience (UX).</li>
-											<li><span class="goldfont">Manage</span> and update content to keep it fresh, accurate, and engaging.</li>
+											<li><span class="goldfont">Manage</span> and update contents to keep it fresh, accurate, and engaging.</li>
 										</ul>
 									</p>
 									<p class="description">
