improving about section last paragraph

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</ul>
 									</p>
 									<p class="description">
-										What sets my work apart is my commitment to solving the specific challenges each business faces. From reducing bounce rates, increasing traffic, to managing WordPress websites using tools like Divi or Elementor, my focus is on attaining results that move the needle for businesses.
+										What sets my work apart is my ability to connect design with business outcomes-impacting sales, user engagement, and brand perception. From reducing bounce rates to increasing traffic or managing WordPress websites using tools like Divi or Elementor, I focus on delivering measurable results that drive business growth.
 									</p>
 								</section>								
 							</header>
