Adding SWD portfolio

--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="https://simcoewebdesign.com/" target="_blank">Simcoe Web Design</h2>
+									</header>
+									<a href="https://simcoewebdesign.com/" target="_blank" class="image fit"><img src="images\Portfolio\swd.jpg" alt="" /></a>
+									<p class="description">I built Simcoe Web Design to help small businesses that need a modern website without paying a huge upfront cost. Many businesses can’t afford expensive design agencies, so I created a subscription model that makes it easier for them to get started. What I’m most proud of is offering ongoing support without the usual high fees. The result is that my clients now have clean, fast, and professional websites that attract more customers while staying within their budget.
+										<p class="description">
+											This project was built using HTML, CSS, and JavaScript, with version control managed through GitHub. The website is hosted on Netlify, ensuring fast and reliable deployment.
+											</p>
+										</p>
+									</p>
+									<ul class="actions special">
+										<li><a href="https://simcoewebdesign.com/" target="_blank" class="button">VIEW SITE</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://ganefinancial.netlify.app/" target="_blank">Gane Financial</h2>
 									</header>
 									<a href="https://ganefinancial.netlify.app/" target="_blank" class="image fit"><img src="images\Portfolio\ganefinancial.jpg" alt="" /></a>
