portfolio section update. Added Kesnow.ca

--- a/index.html
+++ b/index.html
@@ -103,15 +103,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="https://kesnow.ca/" target="_blank">Kinetic Electric Services (Coming Soon)</h2>
+									</header>
+									<a href="https://kesnow.ca/" target="_blank" class="image fit"><img src="images\Portfolio\Kinetic.webp" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://kesnow.ca/" target="_blank" class="button">VIEW SITE</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://simcoewebdesign.com/" target="_blank">Simcoe Web Design</h2>
 									</header>
 									<a href="https://simcoewebdesign.com/" target="_blank" class="image fit"><img src="images\Portfolio\swd.jpg" alt="" /></a>
-									<p class="description">I built Simcoe Web Design to help small businesses that need a modern website without paying a huge upfront cost. Many businesses can’t afford expensive design agencies, so I created a subscription model that makes it easier for them to get started. What I’m most proud of is offering ongoing support without the usual high fees. The result is that my clients now have clean, fast, and professional websites that attract more customers while staying within their budget.
-										<p class="description">
-											This project was built using HTML, CSS, and JavaScript, with version control managed through GitHub. The website is hosted on Netlify, ensuring fast and reliable deployment.
-											</p>
-										</p>
-									</p>
 									<ul class="actions special">
 										<li><a href="https://simcoewebdesign.com/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
@@ -121,16 +124,6 @@
 										<h2><a href="https://ganefinancial.netlify.app/" target="_blank">Gane Financial</h2>
 									</header>
 									<a href="https://ganefinancial.netlify.app/" target="_blank" class="image fit"><img src="images\Portfolio\ganefinancial.jpg" alt="" /></a>
-									<p class="description">Gane Financial approached me to redesign their outdated website, which was suffering from slow loading speeds, an unappealing design, and poor mobile responsiveness. The new website features a modern, a more professional look that reflects their brand, improved performance with faster load times, and a fully mobile-responsive layout to ensure seamless accessibility across all devices.
-										<p class="description1">
-											<b>Built with:</b> HTML, CSS, JavaScript  
-											<br>
-											<b>Version control:</b> GitHub
-											<br>
-											<b>Hosted on:</b> Netlify
-											</p>
-										</p>
-									</p>
 									<ul class="actions special">
 										<li><a href="https://ganefinancial.netlify.app/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
@@ -139,17 +132,7 @@
 									<header>
 										<h2><a href="https://181cco.com/" target="_blank">181 Custom Caulking</a></h2>
 									</header>
-									<a href="https://181cco.com/" target="_blank" class="image fit"><img src="images\Portfolio\181.jpg" alt="" /></a>
-									<p class="description">For 181 Custom Caulking, the goal was to redesign their website to clearly highlight their services and help them manage client information better. I created a simple form system to collect details like emails from different types of clients, making their workflow smoother and more efficient. 
-									</br>
-								    <p class="description1">
-										<b>Built with:</b> HTML, CSS, JavaScript  
-										<br>
-										<b>Version control:</b> GitHub
-										<br>
-										<b>Hosted on:</b> Netlify
-										</p>
-									</p>	
+									<a href="https://181cco.com/" target="_blank" class="image fit"><img src="images\Portfolio\181.jpg" alt="" /></a>	
 									<ul class="actions special">
 										<li><a href="https://181cco.com/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
@@ -159,14 +142,6 @@
 										<h2><a href="https://dundasvalleygolf.com" target="_blank">Dundas Valley</h2>
 									</header>
 									<a href="https://dundasvalleygolf.com" target="_blank" class="image fit"><img src="images\Portfolio\dundas.jpg" alt="" /></a>
-									<p class="description">This was a website redesign. The previous website's poor mobile responsiveness hindered user engagement, particularly as more users accessed the site from smartphones and tablets. I revamped the website with a modern responsive design, incorporating vibrant imagery and concise descriptions to effectively highlight all amenities and activities and optimized its layout and functionality across all devices.
-									</br>
-								   
-									<p class="description1"><b>CMS:</b> WordPress 
-										<br>
-										<b>Page Builder:</b> Elementor
-									</p>
-								    </p>
 									<ul class="actions special">
 										<li><a href="https://dundasvalleygolf.com" class="button" target="_blank">VIEW SITE</a></li>
 									</ul>
@@ -176,12 +151,6 @@
 										<h2><a href="https://thewonderer.com/" target="_blank">The Wonderer</h2>
 									</header>
 									<a href="https://thewonderer.com/" target="_blank" class="image fit"><img src="images\Portfolio\wonderer.jpg" alt="" /></a>
-									<p class="description">The Wonderer needed a fresh and modern website to better connect with its community and showcase its unique lifestyle offerings. I redesigned their site to reflect their vibrant identity, creating a seamless user experience that highlights their services, events, and membership benefits. The new design includes interactive features, clear navigation, and a responsive layout, making it easier for visitors to explore what The Wonderer has to offer and drive membership inquiries.
-										<p class="description1"><b>CMS:</b> WordPress 
-											<br>
-											<b>Page Builder:</b> Elementor
-										</p>
-									</p>
 									<ul class="actions special">
 										<li><a href="https://thewonderer.com/" class="button" target="_blank">VIEW SITE</a></li>
 									</ul>
@@ -191,14 +160,6 @@
 										<h2><a href="https://www.lambsrum.com/ca/" target="_blank">Lamb's Run</a></h2>
 									</header>
 									<a href="https://www.lambsrum.com/ca/" class="image fit" target="_blank"><img src="images\Portfolio\Lamb's Run.webp" alt="" /></a>
-									<p class="description">Lamb's Run is an e-commerce platform specializing in premium rums, where my structured approach began with market research to understand our audience. I created seamless user journeys through wireframes and prototypes, delivering a modern UX/UI design that reflected the brand's identity. 
-										</br>
-									<p class="description1">	
-									<b>CMS:</b> Wordpress
-									<br>
-									<b>Web Server:</b> Nginx
-									</p>
-									</p>
 									<ul class="actions special">
 										<li><a href="https://www.lambsrum.com/ca/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
@@ -208,14 +169,6 @@
 										<h2><a href="https://thedropcollective.ca/" target="_blank">The Drop Collective</a></h2>
 									</header>
 									<a href="https://thedropcollective.ca/" class="image fit" target="_blank"><img src="images\Portfolio\The Drop C.webp" alt=""/></a>
-									<p class="description">The Drop Collective was driven by the mission to establish a vibrant whisky community in Canada, offering the latest news and exclusive whisky releases. The problem was the absence of a dedicated platform to cater to this niche audience. To address this, I created a bespoke website in WordPress, a solution that brought this community to life, providing a hub for enthusiasts to access the latest updates and exclusive releases.
-									</br>
-									<p class="description1">
-										<b>CMS:</b> Wordpress
-										<br>
-										<b>Web Server:</b> Nginx
-									</p>
-								    </p>
 									<ul class="actions special">
 										<li><a href="https://thedropcollective.ca/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
