hiding gane financial for now

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<img src="images\v4.png" alt="Allan Blackett Headshot" class="headshot-img">
 								</div>
 								<h3 class="about-subtitle">Who Is Allan Blackett?</h3>
-								<h4 class="about-tagline">Just a human <span class="goldfont">obsessed</span> with Web Design.</h4>
+								<h4 class="about-tagline">Just a guy <span class="goldfont">obsessed</span> with Web Design.</h4>
 								<section class="about-me">
 									<!-- <p class="intro">Hey, I’m Allan.</p> -->
 									<p class="description">
@@ -119,7 +119,7 @@
 										<li><a href="https://simcoewebdesign.com/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="https://ganefinancial.netlify.app/" target="_blank">Gane Financial</h2>
 									</header>
@@ -127,7 +127,7 @@
 									<ul class="actions special">
 										<li><a href="https://ganefinancial.netlify.app/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
-								</article>
+								</article> -->
 								<article>
 									<header>
 										<h2><a href="https://181cco.com/" target="_blank">181 Custom Caulking</a></h2>
