removed coming soon

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://kesnow.ca/" target="_blank">Kinetic Electric Services (Coming Soon)</h2>
+										<h2><a href="https://kesnow.ca/" target="_blank">Kinetic Electric Services</h2>
 									</header>
 									<a href="https://kesnow.ca/" target="_blank" class="image fit"><img src="images\Portfolio\Kinetic.webp" alt="" /></a>
 									<ul class="actions special">
