--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 										<li><a href="https://ganefinancial.netlify.app/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
 								</article> -->
-								<article>
+								<!-- <article>
 									<header>
 										<h2><a href="https://181cco.com/" target="_blank">181 Custom Caulking</a></h2>
 									</header>
@@ -136,7 +136,7 @@
 									<ul class="actions special">
 										<li><a href="https://181cco.com/" target="_blank" class="button">VIEW SITE</a></li>
 									</ul>
-								</article> 
+								</article>  -->
 								<article>
 									<header>
 										<h2><a href="https://dundasvalleygolf.com" target="_blank">Dundas Valley</h2>
