--- a/projects.html
+++ b/projects.html
@@ -114,9 +114,9 @@
         <picture class="cs-picture">
             <img class="cs-icon" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Ffancy-divider.svg" alt="divider" width="181" height="36" aria-hidden="true">
         </picture>
-        <span class="cs-int-title">Recent Work, Real Results</span>
+        <span class="cs-int-title">Projects</span>
         <p class="cs-text">
-            A selection of websites and marketing builds crafted for small businesses, freelancers, and local brands. Each project blends clean design, fast performance, and clear communication to help clients grow online.
+            A collection of web design and marketing projects built for small businesses and professional teams. Each project focuses on clarity, performance, and measurable results.
         </p>
     </div>
     <!--Background Image-->
