--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
 
     <!-- Second Row -->
-     <div class="cs-container">
+     <!-- <div class="cs-container">
         <div class="cs-content">
         
         </div>
@@ -279,7 +279,7 @@
                     <h3 class="cs-h3">Pullaro Productions</h3>
                 </a>
             </li>
-            <!-- <li class="cs-item">
+            <li class="cs-item">
                 <a class="cs-link" href="https://kesnow.ca/" target="_blank">
                     <div class="cs-info">
                         <picture class="cs-background">
@@ -297,9 +297,9 @@
                     </div>
                     <h3 class="cs-h3">Kinetic Electric Services</h3>
                 </a>
-            </li>  -->
+            </li>  
         </ul>
-    </div>
+    </div> -->
 </section>
 
 <!-- ============================================ -->
@@ -648,7 +648,7 @@
             </div>
         </div>
         <div class="cs-service-group">
-            <span class="cs-header">Services</span>
+            <span class="cs-header">What I Do</span>
             <ul class="cs-ul">
                 <li class="cs-li"><a class="cs-link">Build websites</a></li>
                 <li class="cs-li"><a class="cs-link">Landing pages</a></li>
