--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I'm Allan Blackett, a web designer and freelancer specializing in high-performance websites that are fast, user-friendly, and built for real-world results.">
-    <title>Allan Blackett | Web Designer & Freelancer</title>
+    <title>Projects | Allan Blackett</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Font Awesome -->
@@ -505,7 +505,7 @@
             </div>
         </div>
         <div class="cs-service-group">
-            <span class="cs-header">Services</span>
+            <span class="cs-header">What I Do</span>
             <ul class="cs-ul">
                 <li class="cs-li"><a class="cs-link">Build websites</a></li>
                 <li class="cs-li"><a class="cs-link">Landing pages</a></li>
