removed jsm added andres

--- a/index.html
+++ b/index.html
@@ -172,24 +172,23 @@
             <!-- <a href="portfolio.html" class="cs-button-solid">CHECK OUT MORE</a> -->
         </div>
         <ul class="cs-card-group">
+            <ul class="cs-card-group">
             <li class="cs-item">
-                <a class="cs-link" href="https://jsmfranchising.netlify.app/" target="_blank">
+                <a class="cs-link" href="https://andresjordanboxeo.com/en/" target="_blank">
                     <div class="cs-info">
                         <picture class="cs-background">
-                            <!--Mobile Image-->
-                            <source media="(max-width: 600px)" srcset="assets\images\Home\Projects\jsm franchising.png">
-                            <!--Tablet and above Image-->
-                            <source media="(min-width: 601px)" srcset="assets\images\Home\Projects\jsm franchising.png">
-                            <img loading="lazy" decoding="async" src="assets\images\Home\Projects\jsm franchising.png" alt="bathroom" width="413" height="450">
+                            <source media="(max-width: 600px)" srcset="assets\images\Home\Projects\andres.png">
+                            <source media="(min-width: 601px)" srcset="assets\images\Home\Projects\andres.png">
+                            <img loading="lazy" decoding="async" src="assets\images\Home\Projects\andres.png" alt="Andres Project" width="413" height="450">
                         </picture>
-                        <span class="cs-header">JSM Franchising</span>
+                        <span class="cs-header">Andrés Jordan Boxing</span>
                         <p class="cs-item-text">
-                            This redesign was about trust. JSM’s founder felt their old site didn’t communicate their value. I rebuilt it with clean visuals, tighter structure, and key pages that speak directly to investors and partners.
+                            Redesigned a fast-growing boxing brand’s site to match its real-world reputation, clean, mobile-first layout with video hero, clear CTAs, and WhatsApp booking for instant client contact.
                         </p>
                         <span class="cs-number">
                             <img src="assets/images/icons/arrow-top-right-2.webp" alt="icon" width="40" height="40">
                         </span>                    </div>
-                    <h3 class="cs-h3">JSM Franchising</h3>
+                    <h3 class="cs-h3">Andrés Jordan Boxing</h3>
                 </a>
             </li>
             <li class="cs-item">
@@ -242,8 +241,7 @@
         <div class="cs-content">
         
         </div>
-        <ul class="cs-card-group">
-            <li class="cs-item">
+        <li class="cs-item">
                 <a class="cs-link" href="https://jsmfranchising.netlify.app/" target="_blank">
                     <div class="cs-info">
                         <picture class="cs-background">
